--- a/src/css/style.css
+++ b/src/css/style.css
@@ -480,8 +480,7 @@ header.fixed {
 .top_search_bar {
   position: absolute;
   padding: 5px 0;
-  background-color: #fff;
-  border-bottom: solid 2px #f2f2f2;
+  background-color: rgba(137, 177, 213, 0.2);
   left: 50%;
   width: 100%;
   opacity: 0;
@@ -506,14 +505,15 @@ header.fixed {
   .top_search_bar input {
     display: inline-block;
     flex-grow: 1;
-    border: none; }
+    padding: 10px;
+    border: none;
+    background: none; }
   .top_search_bar button {
     width: 50px;
     height: 50px;
-    border-radius: 100%;
     border: none;
-    background-color: #c0c0c0;
-    color: #fff;
+    background: none;
+    color: #5c6468;
     cursor: pointer;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
@@ -1090,6 +1090,7 @@ div.zabuto_calendar .badge-event {
 
   .nav-menu {
     position: fixed;
+    overflow-y: scroll;
     z-index: 100;
     height: 100%;
     width: 100%;
