--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1014,6 +1014,38 @@ div.zabuto_calendar .badge-event {
   margin: 15px 0; }
   .sidebar .advert img {
     width: 100%; }
+.sidebar .widget {
+  margin-bottom: 20px; }
+  .sidebar .widget .widget-title {
+    font-family: "deliusregular", sans-serif;
+    font-size: 25px;
+    letter-spacing: 2px;
+    color: #89b1d5;
+    text-transform: uppercase; }
+  .sidebar .widget.sondage {
+    font-size: 13px;
+    padding: 10px;
+    background-color: rgba(137, 177, 213, 0.1);
+    border-radius: 5px; }
+    .sidebar .widget.sondage ul {
+      margin: 10px 0;
+      padding: 0;
+      list-style: none; }
+    .sidebar .widget.sondage .radio-option {
+      padding: 5px 0;
+      display: block;
+      margin-bottom: 2px;
+      cursor: pointer;
+      font-weight: normal; }
+    .sidebar .widget.sondage input {
+      margin-right: 18px; }
+    .sidebar .widget.sondage button {
+      background: #89b1d5;
+      display: block;
+      margin: 15px auto;
+      padding: 10px 30px;
+      color: #fff;
+      border: none; }
 
 #filtre-localite label {
   text-transform: uppercase;
@@ -1055,6 +1087,57 @@ div.zabuto_calendar .badge-event {
       content: '\2043';
       display: inline-block;
       margin-right: 15px; }
+
+.search_result_category {
+  margin-bottom: 20px; }
+  .search_result_category:last-child {
+    margin: 0; }
+  .search_result_category .search_result_category_header {
+    background: #f2f2f2;
+    display: block;
+    width: 100%;
+    text-align: left;
+    cursor: pointer;
+    padding: 10px 15px 10px 15px;
+    border: none;
+    font-size: 16px;
+    font-family: "deliusregular", sans-serif;
+    color: #5c6468;
+    margin-bottom: 10px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    position: relative; }
+    .search_result_category .search_result_category_header:hover {
+      background-color: #fb7660;
+      color: #fff; }
+    .search_result_category .search_result_category_header:after {
+      content: "\f067";
+      font-family: FontAwesome, sans-serif;
+      position: absolute;
+      right: 15px; }
+
+#search_result_evenements .liste-evenements {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
+  #search_result_evenements .liste-evenements .list-item {
+    width: calc(50% - 12px);
+    margin-bottom: 10px;
+    border: solid 1px #f2f2f2; }
+    #search_result_evenements .liste-evenements .list-item:nth-of-type(odd) {
+      margin-right: 10px; }
+    #search_result_evenements .liste-evenements .list-item:nth-of-type(even) {
+      margin-left: 10px; }
+    #search_result_evenements .liste-evenements .list-item .col-xs-9 {
+      padding: 10px 0 15px; }
+    #search_result_evenements .liste-evenements .list-item .event_title {
+      font-family: "deliusregular", sans-serif;
+      font-size: 18px;
+      margin-bottom: 10px; }
+    #search_result_evenements .liste-evenements .list-item:last-child {
+      margin-bottom: 0; }
 
 @media (max-width: 1366px) {
   .error404 {
