--- a/src/css/style.css
+++ b/src/css/style.css
@@ -117,6 +117,41 @@
     -o-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
     transform: translate(0, -50%); } }
+@keyframes floatingCloud_1 {
+  0% {
+    -webkit-transform: translate(0, 0);
+    -moz-transform: translate(0, 0);
+    -o-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    transform: translate(0, 0); }
+  100% {
+    -webkit-transform: translate(50px, 10px);
+    -moz-transform: translate(50px, 10px);
+    -o-transform: translate(50px, 10px);
+    -ms-transform: translate(50px, 10px);
+    transform: translate(50px, 10px); } }
+@keyframes floatingCloud_2 {
+  0% {
+    -webkit-transform: translate(0, 0);
+    -moz-transform: translate(0, 0);
+    -o-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    transform: translate(0, 0); }
+  100% {
+    -webkit-transform: translate(50px, -10px);
+    -moz-transform: translate(50px, -10px);
+    -o-transform: translate(50px, -10px);
+    -ms-transform: translate(50px, -10px);
+    transform: translate(50px, -10px); } }
+@keyframes gradientBackground {
+  0% {
+    background: #89b1d5; }
+  40% {
+    background: #89b1d5; }
+  60% {
+    background: #fb7660; }
+  100% {
+    background: #fb7660; } }
 *,
 *:focus {
   outline: none; }
@@ -131,6 +166,18 @@ body {
   padding-bottom: 542px;
   position: relative;
   margin: 0; }
+
+h2, h1, h3 {
+  font-family: "deliusregular", sans-serif; }
+
+h1 {
+  font-size: 35px; }
+
+h2 {
+  font-size: 28px; }
+
+h3 {
+  font-size: 22px; }
 
 .rel {
   position: relative; }
@@ -292,6 +339,73 @@ a:focus {
 
 .sharethis-inline-share-buttons {
   margin: 10px 0 15px; }
+
+.newsletter-bar {
+  padding: 50px 0;
+  margin-top: 30px;
+  background-color: #89b1d5;
+  color: #fff;
+  position: relative;
+  animation: gradientBackground 20s linear infinite alternate; }
+  .newsletter-bar:before {
+    content: '';
+    position: absolute;
+    display: block;
+    z-index: 0;
+    top: 0;
+    right: 20%;
+    width: 128px;
+    height: 128px;
+    background: url("../img/cloud.png") no-repeat center center;
+    background-size: cover;
+    -webkit-animation: floatingCloud_1 5s linear infinite alternate;
+    -moz-animation: floatingCloud_1 5s linear infinite alternate;
+    -o-animation: floatingCloud_1 5s linear infinite alternate;
+    animation: floatingCloud_1 5s linear infinite alternate; }
+  .newsletter-bar:after {
+    content: '';
+    position: absolute;
+    display: block;
+    z-index: 0;
+    top: 85px;
+    right: 25%;
+    width: 120px;
+    height: 120px;
+    background: url("../img/cloud2.png") no-repeat center center;
+    background-size: cover;
+    -webkit-animation: floatingCloud_2 10s linear infinite alternate;
+    -moz-animation: floatingCloud_2 10s linear infinite alternate;
+    -o-animation: floatingCloud_2 10s linear infinite alternate;
+    animation: floatingCloud_2 10s linear infinite alternate; }
+  .newsletter-bar h3 {
+    font-size: 30px;
+    letter-spacing: 3px;
+    margin-top: 0; }
+  .newsletter-bar .form-row {
+    font-weight: normal;
+    display: block;
+    width: 100%; }
+    .newsletter-bar .form-row .form-input {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      border: none;
+      color: #5c6468; }
+    .newsletter-bar .form-row button[type="submit"] {
+      background: transparent;
+      color: #fff;
+      border: none;
+      padding: 10px 30px;
+      font-size: 18px;
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out; }
+      .newsletter-bar .form-row button[type="submit"]:hover {
+        background-color: #6398c8; }
+      .newsletter-bar .form-row button[type="submit"]:after {
+        content: "\f1d8";
+        font-family: FontAwesome, sans-serif; }
 
 header {
   margin-bottom: 30px;
@@ -1138,6 +1252,48 @@ div.zabuto_calendar .badge-event {
       margin-bottom: 10px; }
     #search_result_evenements .liste-evenements .list-item:last-child {
       margin-bottom: 0; }
+
+#contact-form .form-row {
+  display: block;
+  font-weight: normal;
+  margin-bottom: 15px; }
+#contact-form .label {
+  color: #fb7660;
+  display: block;
+  text-align: left;
+  padding-left: 0; }
+#contact-form .form-input {
+  display: block;
+  margin: 5px 0;
+  padding: 10px;
+  width: 100%;
+  border: solid 3px #f2f2f2; }
+#contact-form textarea.form-input {
+  height: 180px;
+  resize: vertical; }
+#contact-form button[type="submit"] {
+  display: block;
+  background-color: #fb7660;
+  color: #fff;
+  padding: 10px 30px;
+  border: none; }
+
+.contact-info .adresse,
+.contact-info .telephone,
+.contact-info .email {
+  margin-bottom: 5px; }
+.contact-info .adresse:before,
+.contact-info .telephone:before,
+.contact-info .email:before {
+  font-family: FontAwesome, sans-serif;
+  margin-right: 15px;
+  color: #C0C0C0; }
+.contact-info .adresse:before {
+  content: '\f015'; }
+.contact-info .telephone:before {
+  content: '\f095'; }
+.contact-info .email:before {
+  content: '\f0e0'; }
 
 @media (max-width: 1366px) {
   .error404 {
