--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -209,7 +209,7 @@ a:focus{
   background-color: $blue;
   color: #fff;
   position: relative;
-  @include animation(gradientBackground 20s linear infinite alternate);
+  @include animation(gradientBackground 10s linear infinite alternate);
 
   &:before{
     content: '';
@@ -217,12 +217,13 @@ a:focus{
     display: block;
     z-index: 0;
     top: 0;
+    opacity: 0.2;
     right: 20%;
     width: 128px;
     height: 128px;
     background: url("../img/cloud.png") no-repeat center center;
     background-size: cover;
-    @include animation(floatingCloud_1 10s linear infinite alternate);
+    @include animation(floatingCloud_1 5s linear infinite alternate);
   }
   &:after{
     content: '';
@@ -231,11 +232,12 @@ a:focus{
     z-index: 0;
     top: 85px;
     right: 25%;
+    opacity: 0.2;
     width: 120px;
     height: 120px;
     background: url("../img/cloud2.png") no-repeat center center;
     background-size: cover;
-    @include animation(floatingCloud_2 20s linear infinite alternate);
+    @include animation(floatingCloud_2 10s linear infinite alternate);
   }
 
 
@@ -261,7 +263,7 @@ a:focus{
     button[type="submit"]{
       background: transparent;
       color: #fff;
-      border: solid 2px transparent;
+      border: solid 2px rgba(#fff,0.1);
       border-radius: 30px;
       padding: 10px 30px;
       @include transition(0.3s);
@@ -289,6 +291,27 @@ a:focus{
   }
 }
 
-.photo-gagnant{
-
+.grid-item:hover:before{
+  content: '';
+  display: block;
+  position: absolute;
+  width: calc(100% - 5px);
+  height: calc(100% - 5px);
+  left: 50%;
+  top: 50%;
+  @include transform(translate(-50%,-50%));
+  background-color: rgba(#000,0.3);
+  z-index: 1;
+}
+.grid-item:hover:after{
+  content: '\f002';
+  font-family: FontAwesome, sans-serif;
+  position: absolute;
+  font-size: 30px;
+  color: #fff;
+  opacity: 0.6;
+  left: 50%;
+  top: 50%;
+  @include transform(translate(-50%,-50%));
+  z-index: 2;
 }
