--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -152,12 +152,15 @@ header.fixed{
     position: relative;
     @include transition(0.3s);
 
+
     img{
       position: absolute;
       left: 50%;
       top: -70px;
       @include transition(0.3s);
       @include transform(translate(-50%,0));
+
+
     }
   }
 
@@ -165,6 +168,10 @@ header.fixed{
   .menu-item.active,
   .sub-menu:hover > .menu-item{
     box-shadow:inset 0 -3px 0 $orange;
+
+    img{
+      @include transform(translate(-50%,-8px));
+    }
   }
   .sub-menu{
     position: relative;
