--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -78,7 +78,8 @@ a:focus{
   letter-spacing: 5px;
   position: relative;
   margin: 50px 0;
-  h2, h3{
+  h2, h3,
+  h1{
     font-family: $fontTitle;
     font-size: 45px;
     color: $blue;
@@ -99,7 +100,8 @@ a:focus{
   text-align: left;
   margin: 0 0 20px;
 
-  h2{
+  h2,
+  h1{
     padding: 0 10px 0 0;
   }
 }
