--- a/src/css/_search.scss
+++ b/src/css/_search.scss
@@ -41,18 +41,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
 
     .list-item{
-      width: calc(50% - 12px);
+      width: 49%;
       margin-bottom: 10px;
       border: solid 1px $light_gray;
-
-      &:nth-of-type(odd){
-        margin-right: 10px;
-      }
-      &:nth-of-type(even){
-        margin-left: 10px;
-      }
 
       .col-xs-9{
         padding: 10px 0 15px;
@@ -60,9 +54,19 @@
 
       .event_title{
         font-family: $fontTitle;
-        font-size: 18px;
+        font-size: 20px;
+        color: $blue;
         margin-bottom: 10px;
+        padding: 5px 10px 0;
       }
+      .event_location,
+      .annonceur,
+      .event_date{
+        padding: 0 10px 5px;
+        font-size: 13px;
+        font-style: italic;
+      }
+
 
       &:last-child{
         margin-bottom: 0;
