--- a/src/css/style.css
+++ b/src/css/style.css
@@ -232,7 +232,8 @@ a:focus {
   letter-spacing: 5px;
   position: relative;
   margin: 50px 0; }
-  .section-title h2, .section-title h3 {
+  .section-title h2, .section-title h3,
+  .section-title h1 {
     font-family: "deliusregular", sans-serif;
     font-size: 45px;
     color: #89b1d5;
@@ -248,7 +249,8 @@ a:focus {
 .section-title.left {
   text-align: left;
   margin: 0 0 20px; }
-  .section-title.left h2 {
+  .section-title.left h2,
+  .section-title.left h1 {
     padding: 0 10px 0 0; }
 
 .section-title:after {
@@ -603,6 +605,14 @@ header.fixed {
   .nav-menu .menu-item.active,
   .nav-menu .sub-menu:hover > .menu-item {
     box-shadow: inset 0 -3px 0 #fb7660; }
+    .nav-menu .menu-item:hover img,
+    .nav-menu .menu-item.active img,
+    .nav-menu .sub-menu:hover > .menu-item img {
+      -webkit-transform: translate(-50%, -8px);
+      -moz-transform: translate(-50%, -8px);
+      -o-transform: translate(-50%, -8px);
+      -ms-transform: translate(-50%, -8px);
+      transform: translate(-50%, -8px); }
   .nav-menu .sub-menu {
     position: relative; }
     .nav-menu .sub-menu ul {
@@ -929,6 +939,15 @@ footer {
   border-color: #89b1d5; }
 .articles .row:nth-of-type(odd) .col-sm-6:nth-of-type(odd) .article {
   border-color: #89b1d5; }
+.articles.tiles {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between; }
+  .articles.tiles .article {
+    width: 49%; }
+    .articles.tiles .article:nth-of-type(2n) {
+      border-color: #89b1d5; }
 
 .article-title {
   text-align: center;
@@ -1155,6 +1174,18 @@ footer {
     border-radius: 10px;
     margin-bottom: 5px; }
 
+.tags-list {
+  padding: 15px 0;
+  text-align: right; }
+  .tags-list .tag {
+    padding: 5px 10px;
+    font-size: 13px;
+    background-color: #f2f2f2;
+    color: #5c6468;
+    border-radius: 5px;
+    display: inline-block;
+    margin: 0 0 2px 5px; }
+
 div.zabuto_calendar .badge-today {
   background-color: #5c6468; }
 div.zabuto_calendar .table tr td.event div.day {
@@ -1315,21 +1346,26 @@ div.zabuto_calendar .badge-event {
 #search_result_evenements .liste-evenements {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  justify-content: space-between; }
   #search_result_evenements .liste-evenements .list-item {
-    width: calc(50% - 12px);
+    width: 49%;
     margin-bottom: 10px;
     border: solid 1px #f2f2f2; }
-    #search_result_evenements .liste-evenements .list-item:nth-of-type(odd) {
-      margin-right: 10px; }
-    #search_result_evenements .liste-evenements .list-item:nth-of-type(even) {
-      margin-left: 10px; }
     #search_result_evenements .liste-evenements .list-item .col-xs-9 {
       padding: 10px 0 15px; }
     #search_result_evenements .liste-evenements .list-item .event_title {
       font-family: "deliusregular", sans-serif;
-      font-size: 18px;
-      margin-bottom: 10px; }
+      font-size: 20px;
+      color: #89b1d5;
+      margin-bottom: 10px;
+      padding: 5px 10px 0; }
+    #search_result_evenements .liste-evenements .list-item .event_location,
+    #search_result_evenements .liste-evenements .list-item .annonceur,
+    #search_result_evenements .liste-evenements .list-item .event_date {
+      padding: 0 10px 5px;
+      font-size: 13px;
+      font-style: italic; }
     #search_result_evenements .liste-evenements .list-item:last-child {
       margin-bottom: 0; }
 
@@ -1570,7 +1606,12 @@ div.zabuto_calendar .badge-event {
     width: 33.333%; } }
 @media (max-width: 640px) {
   #top_header {
-    margin-bottom: 350px; } }
+    margin-bottom: 350px; }
+
+  .articles.tiles {
+    display: block; }
+    .articles.tiles .article {
+      width: 100%; } }
 @media (max-width: 560px) {
   #top_header {
     margin-bottom: 320px; }
@@ -1598,6 +1639,6 @@ div.zabuto_calendar .badge-event {
     width: 50%; } }
 @media (max-width: 380px) {
   #top_header {
-    margin-bottom: 230px; } }
+    margin-bottom: 300px; } }
 
 /*# sourceMappingURL=style.css.map */
