--- a/src/css/style.css
+++ b/src/css/style.css
@@ -171,10 +171,10 @@ h2, h1, h3 {
   font-family: "deliusregular", sans-serif; }
 
 h1 {
-  font-size: 35px; }
+  font-size: 38px; }
 
 h2 {
-  font-size: 28px; }
+  font-size: 32px; }
 
 h3 {
   font-size: 22px; }
@@ -345,7 +345,6 @@ a:focus {
 .newsletter-bar {
   padding: 50px 0;
   margin-top: 30px;
-  background-color: #89b1d5;
   color: #fff;
   position: relative;
   -webkit-animation: gradientBackground 10s linear infinite alternate;
@@ -962,6 +961,9 @@ footer {
   overflow: hidden;
   position: relative;
   margin-bottom: 10px; }
+  .hero-image + .publication-date {
+    text-align: center;
+    font-style: italic; }
   .hero-image img {
     width: 100%;
     position: absolute;
@@ -1185,6 +1187,99 @@ footer {
     border-radius: 5px;
     display: inline-block;
     margin: 0 0 2px 5px; }
+
+.article-body {
+  margin-bottom: 50px; }
+  .article-body h2,
+  .article-body h1 {
+    margin-top: 50px; }
+    .article-body h2:first-of-type,
+    .article-body h1:first-of-type {
+      margin-top: 20px; }
+  .article-body h3 {
+    margin-top: 40px; }
+
+.formulaire-photos {
+  padding: 50px 20px 20px;
+  margin-top: 30px;
+  border-radius: 5px;
+  text-align: center;
+  position: relative;
+  -webkit-animation: gradientBackground 10s linear infinite alternate;
+  -moz-animation: gradientBackground 10s linear infinite alternate;
+  -o-animation: gradientBackground 10s linear infinite alternate;
+  -ms-animation: gradientBackground 10s linear infinite alternate;
+  animation: gradientBackground 10s linear infinite alternate; }
+  .formulaire-photos:before {
+    content: '';
+    position: absolute;
+    display: block;
+    z-index: 0;
+    top: 80px;
+    opacity: 0.2;
+    right: 10%;
+    width: 100px;
+    height: 100px;
+    background: url("../img/photography.png") no-repeat center center;
+    background-size: cover;
+    -webkit-animation: floatingCloud_1 5s linear infinite alternate;
+    -moz-animation: floatingCloud_1 5s linear infinite alternate;
+    -o-animation: floatingCloud_1 5s linear infinite alternate;
+    -ms-animation: floatingCloud_1 5s linear infinite alternate;
+    animation: floatingCloud_1 5s linear infinite alternate; }
+  .formulaire-photos:after {
+    content: '';
+    position: absolute;
+    display: block;
+    z-index: 0;
+    top: 5px;
+    right: 20%;
+    opacity: 0.2;
+    width: 50px;
+    height: 50px;
+    background: url("../img/cloud2.png") no-repeat center center;
+    background-size: cover;
+    -webkit-animation: floatingCloud_2 10s linear infinite alternate;
+    -moz-animation: floatingCloud_2 10s linear infinite alternate;
+    -o-animation: floatingCloud_2 10s linear infinite alternate;
+    -ms-animation: floatingCloud_2 10s linear infinite alternate;
+    animation: floatingCloud_2 10s linear infinite alternate; }
+  .formulaire-photos #image-form-field {
+    display: none; }
+  .formulaire-photos label {
+    font-weight: normal;
+    display: block;
+    font-family: "deliusregular", sans-serif;
+    font-size: 17px;
+    overflow: hidden;
+    width: 100%;
+    border-radius: 5px;
+    padding: 10px 30px;
+    background-color: #fff;
+    border: dashed 2px #c0c0c0;
+    cursor: pointer;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+    .formulaire-photos label:hover {
+      background-color: #f2f2f2; }
+  .formulaire-photos button {
+    border: none;
+    padding: 10px 25px;
+    color: #fff; }
+    .formulaire-photos button.submit-button {
+      background-color: #76a5ce;
+      opacity: 0.2; }
+      .formulaire-photos button.submit-button:hover {
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+        background-color: #fb7660; }
+    .formulaire-photos button.reset-button {
+      background-color: #fff;
+      color: #5c6468; }
 
 div.zabuto_calendar .badge-today {
   background-color: #5c6468; }
