Updates: - INtégration de la pagination dans les pages de recherche, articles, etc. - Fonction de création d'extraits - Intégration des meta Open Graph meta description, etc. - Bugfixes dans les pages articles

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -156,7 +156,8 @@ header.fixed{
     img{
       position: absolute;
       left: 50%;
-      top: -70px;
+      padding: 15px;
+      top: -82px;
       @include transition(0.3s);
       @include transform(translate(-50%,0));
 
