--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -316,3 +316,34 @@ a:focus{
   @include transform(translate(-50%,-50%));
   z-index: 2;
 }
+
+.pagination{
+  width: 100%;
+  padding: 10px 0;
+  overflow: hidden;
+  border-top: solid 1px $light_gray;
+  ul{
+    float: right;
+    list-style: none;
+    padding: 0;
+
+    li{
+      display: inline-block;
+      vertical-align: top;
+      margin-left: 5px;
+      margin-bottom: 5px;
+
+
+      a, span{
+        display: inline-block;
+        padding: 10px 15px;
+        font-weight: 700;
+        background-color: rgba($blue,0.8);
+        color: #fff;
+      }
+      a.first{
+
+      }
+    }
+  }
+}
