--- a/src/css/style.css
+++ b/src/css/style.css
@@ -458,6 +458,27 @@ a:focus {
   transform: translate(-50%, -50%);
   z-index: 2; }
 
+.pagination {
+  width: 100%;
+  padding: 10px 0;
+  overflow: hidden;
+  border-top: solid 1px #f2f2f2; }
+  .pagination ul {
+    float: right;
+    list-style: none;
+    padding: 0; }
+    .pagination ul li {
+      display: inline-block;
+      vertical-align: top;
+      margin-left: 5px;
+      margin-bottom: 5px; }
+      .pagination ul li a, .pagination ul li span {
+        display: inline-block;
+        padding: 10px 15px;
+        font-weight: 700;
+        background-color: rgba(137, 177, 213, 0.8);
+        color: #fff; }
+
 header {
   margin-bottom: 30px;
   background-color: #fff;
@@ -590,7 +611,8 @@ header.fixed {
     .nav-menu .menu-item img {
       position: absolute;
       left: 50%;
-      top: -70px;
+      padding: 15px;
+      top: -82px;
       -webkit-transition: all 0.3s ease-in-out;
       -moz-transition: all 0.3s ease-in-out;
       -o-transition: all 0.3s ease-in-out;
@@ -1342,6 +1364,19 @@ div.zabuto_calendar .badge-event {
     letter-spacing: 2px;
     color: #89b1d5;
     text-transform: uppercase; }
+  .sidebar .widget .link.center {
+    display: block;
+    padding: 8px 10px;
+    margin: 5px 0;
+    text-align: center;
+    color: #5c6468;
+    font-size: 13px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+    .sidebar .widget .link.center:hover {
+      color: #fb7660; }
   .sidebar .widget.sondage {
     font-size: 13px;
     padding: 10px;
